--- a/src/assets/scss/react/now-ui-kit/_responsive.scss
+++ b/src/assets/scss/react/now-ui-kit/_responsive.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width: 991px){
   .sidebar-collapse .navbar-collapse:before {
-    background: $info-color;
-    background: linear-gradient($black-color,$black-color 80%);
+    background: #ffffff4a;
+    background: linear-gradient(#ffffff4a 0%,#fff0 80%);
   }
   .navbar-nav .dropdown-menu {
     position: static !important;
