--- a/src/assets/scss/now-ui-kit/mixins/_navbar.scss
+++ b/src/assets/scss/now-ui-kit/mixins/_navbar.scss
@@ -189,21 +189,21 @@
     @include transition(0.5s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
     &:before {
-      background: $brand-primary; /* For browsers that do not support gradients */
+      background: #ffffff4a 0%; /* For browsers that do not support gradients */
       background: -webkit-linear-gradient(
-        $brand-primary 0%,
+        #ffffff4a 0% 0%,
         #000 80%
       ); /* For Safari 5.1 to 6.0 */
       background: -o-linear-gradient(
-        $brand-primary 0%,
+        #ffffff4a 0% 0%,
         #000 80%
       ); /* For Opera 11.1 to 12.0 */
       background: -moz-linear-gradient(
-        $brand-primary 0%,
+        #ffffff4a 0% 0%,
         #000 80%
       ); /* For Firefox 3.6 to 15 */
       background: linear-gradient(
-        $brand-primary 0%,
+        #ffffff4a 0% 0%,
         #000 80%
       ); /* Standard syntax (must be last) */
       @include opacity(0.76);
