trusted font too large mobile fix

--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -79,7 +79,7 @@ video {
 }
 
 @media (max-width: 576px) {
-  .text-success {
-    font-size: 200% !important;
+  .trusted {
+    font-size: 220% !important;
   }
 }
