iphone play button fix

--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -83,3 +83,7 @@ video {
     font-size: 200% !important;
   }
 }
+*::-webkit-media-controls-start-playback-button {
+  display: none !important;
+  -webkit-appearance: none;
+}
