--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -17,6 +17,56 @@ and horizontally */
   z-index: -1;
 }
 
+.card-profile {
+  min-height: 90%;
+}
+
+.loan-finder-header {
+  content: "\A";
+
+  width: 100%;
+  height: 100%;
+
+  background: rgba(0, 0, 0, 0.6);
+  opacity: 1;
+}
+.tabs-loans {
+  color: #999 !important;
+  border-bottom: 1px solid #999 !important;
+}
+
+.tabs-active {
+  border-bottom: 1px solid black !important;
+}
+
+.loans-list {
+  list-style: none;
+}
+/* media query that hides unless mobile */
+@media (min-width: 991px) {
+  .home-mobile-btn {
+    display: none;
+  }
+}
+
+@media (max-width: 991px) {
+  .loan-finder-pre-header {
+    margin-top: 0 !important;
+  }
+  .projects-1 {
+    padding-top: 0 !important;
+  }
+}
+
+.loans-list li::before {
+  content: "\2022";
+  color: red;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
 .page-header .page-header-image {
   position: absolute;
   background-size: cover;
